Fixes To Broken Crafting System
Fixes the previously broken crafting system, with a major rework to the entirety of the recipe files.